# fraud-detection-mlops

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: cd.yml  ci.yml  train.yml
configs/: model.yaml  rules.yaml
data/: README.md
data/sample/: transactions_test.parquet  transactions_train.parquet
docs/: api.md  architecture.md  model_card.md  runbook.md
docs/extras/: README.md
notebooks/: 01_eda.ipynb
scripts/: generate_pdf_doc.py  generate_roadmaps_pdf.py  smoke_test.py
src/fraud_detection/: __init__.py  cli.py
src/fraud_detection/api/: __init__.py  main.py
src/fraud_detection/data/: __init__.py  schemas.py  synthetic.py
src/fraud_detection/decision/: __init__.py  engine.py
src/fraud_detection/features/: __init__.py  build_features.py
src/fraud_detection/models/: __init__.py  predict.py  train.py
src/fraud_detection/monitoring/: __init__.py  drift.py  metrics.py
src/fraud_detection/rules/: __init__.py  engine.py
src/fraud_detection/utils/: __init__.py  config.py  logging.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_decision.py  test_drift.py  test_features.py  test_rules.py  test_synthetic.py
