[project]
name = "fraud-detection-mlops"
version = "0.1.0"
description = "End-to-end credit card fraud detection: business rules + ML, productionized."
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "MLOps Team", email = "mlops@fintech.example" }]

dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2",
    "scikit-learn>=1.4",
    "lightgbm>=4.3",
    "pyarrow>=15.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "PyYAML>=6.0",
    "joblib>=1.3",
    "structlog>=24.1",
    "prometheus-client>=0.20",
    "mlflow>=2.12",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "httpx>=0.27",
    "ruff>=0.4",
    "black>=24.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "types-PyYAML",
]

[project.scripts]
fraud = "fraud_detection.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fraud_detection"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM", "C4", "ARG", "PL"]
ignore = [
    "PLR0913", "PLR2004", "PLR0915", "PLR0912", "PLR0911",
    "N803", "N806",
    "B008",   # Typer relies on function calls as defaults (typer.Option / typer.Argument).
    "UP042",  # str + Enum is intentional for Pydantic v1/v2 + FastAPI interop.
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG", "PLR2004", "PLC0415"]  # PLC0415: test isolation via deferred imports.
"src/fraud_detection/cli.py" = ["PLC0415"]  # CLI lazy imports to keep --help fast.

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = false
files = ["src"]

[tool.pytest.ini_options]
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests touching API + model artifacts",
]

[tool.coverage.run]
source = ["src/fraud_detection"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
